demonstrations/k8s/conf/demo/templates/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  type: LoadBalancer
  selector:
    app: consumer
  ports:
  - port: 3002
    targetPort: 3000
