demonstrations/k8s/conf/demo/templates/router.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: router
spec:
  parentRefs:
  - name: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /producer
    backendRefs:
    - name: producer-service
      port: 3001
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ""

  - matches:
    - path:
        type: PathPrefix
        value: /consumer
    backendRefs:
    - name: consumer-service
      port: 3002
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ""
